Fixes yaml indentation

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - env:
-         NUGET_API_KEY: $${ secrets.NUGET_API_KEY }}
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
@@ -28,6 +26,8 @@ jobs:
     - name: Package
       run: dotnet pack --configuration release --include-symbols
     - name: Publish
+      env:
+        NUGET_API_KEY: $${ secrets.NUGET_API_KEY }}
       run: >
         dotnet nuget push .\src\Markdown.Console\bin\Release\Markdown.Console.0.1.0.nupkg
         --api-key $NUGET_API_KEY
