--- a/.github/workflows/on_push_to_main.yml
+++ b/.github/workflows/on_push_to_main.yml
@@ -3,11 +3,9 @@ name: .NET
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-  build:
+  Publish:
 
     runs-on: ubuntu-latest
 
@@ -22,13 +20,13 @@ jobs:
     - name: Build
       run: dotnet build --no-restore --configuration release
     - name: Test
-      run: dotnet test --no-build --verbosity normal --configuration Release
+      run: dotnet test --no-build --verbosity normal --configuration release
     - name: Package
-      run: dotnet pack --configuration release --include-symbols
+      run: dotnet pack --include-symbols --configuration release
     - name: Publish
       env:
         NUGET_API_KEY: $${ secrets.NUGET_API_KEY }}
       run: >
-        dotnet nuget push .\src\Markdown.Console\bin\Release\Markdown.Console.0.1.0.nupkg
+        dotnet nuget push ./src/Markdown.Console/bin/Release/Markdown.Console.*.nupkg
         --api-key $NUGET_API_KEY
         --source https://api.nuget.org/v3/index.json
