Adds quotes around API key

--- a/.github/workflows/on_push_to_main.yml
+++ b/.github/workflows/on_push_to_main.yml
@@ -28,5 +28,5 @@ jobs:
         NUGET_API_KEY: $${ secrets.NUGET_API_KEY }}
       run: >
         dotnet nuget push ./src/Markdown.Console/bin/Release/Markdown.Console.*.nupkg
-        --api-key $NUGET_API_KEY
+        --api-key "$NUGET_API_KEY"
         --source https://api.nuget.org/v3/index.json
