Adds test code for nuget publish
WARNING || This change must be reverted before we add the real api key

--- a/.github/workflows/on_push_to_main.yml
+++ b/.github/workflows/on_push_to_main.yml
@@ -26,7 +26,8 @@ jobs:
     - name: Publish
       env:
         NUGET_API_KEY: $${ secrets.NUGET_API_KEY }}
-      run: >
-        dotnet nuget push ./src/Markdown.Console/bin/Release/Markdown.Console.*.nupkg
-        --api-key "$NUGET_API_KEY"
-        --source https://api.nuget.org/v3/index.json
+      run: echo $NUGET_API_KEY
+    #   run: >
+    #     dotnet nuget push ./src/Markdown.Console/bin/Release/Markdown.Console.*.nupkg
+    #     --api-key "$NUGET_API_KEY"
+    #     --source https://api.nuget.org/v3/index.json
