--- a/.github/workflows/on_push_to_main.yml
+++ b/.github/workflows/on_push_to_main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Package
       run: dotnet pack --include-symbols --configuration release
     - name: Publish
-      env:
+      with:
         NUGET_API_KEY: $${ secrets.NUGET_API_KEY }}
       run: echo $NUGET_API_KEY
     #   run: >
