--- a/.github/workflows/on_push_to_main.yml
+++ b/.github/workflows/on_push_to_main.yml
@@ -11,23 +11,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    # - name: Setup .NET
-    #   uses: actions/setup-dotnet@v2
-    #   with:
-    #     dotnet-version: 6.0.x
-    # - name: Restore dependencies
-    #   run: dotnet restore
-    # - name: Build
-    #   run: dotnet build --no-restore --configuration release
-    # - name: Test
-    #   run: dotnet test --no-build --verbosity normal --configuration release
-    # - name: Package
-    #   run: dotnet pack --include-symbols --configuration release
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 6.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build --no-restore --configuration release
+    - name: Test
+      run: dotnet test --no-build --verbosity normal --configuration release
+    - name: Package
+      run: dotnet pack --include-symbols --configuration release
     - name: Publish
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
       run: echo "$NUGET_API_KEY"
-    #   run: >
-    #     dotnet nuget push ./src/Markdown.Console/bin/Release/Markdown.Console.*.nupkg
-    #     --api-key "$NUGET_API_KEY"
-    #     --source https://api.nuget.org/v3/index.json
+        dotnet nuget push ./src/Markdown.Console/bin/Release/Markdown.Console.*.nupkg
+        --api-key "$NUGET_API_KEY"
+        --source https://api.nuget.org/v3/index.json
