Adds new top-level namespace `Morello`

--- a/src/Morello.Markdown.Console.Tests/Morello.Markdown.Console.Tests.csproj
+++ b/src/Morello.Markdown.Console.Tests/Morello.Markdown.Console.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Markdown.Console\Markdown.Console.csproj" />
+    <ProjectReference Include="..\Morello.Markdown.Console\Morello.Markdown.Console.csproj" />
   </ItemGroup>
 
 </Project>
