--- a/.github/workflows/on_push_to_main.yml
+++ b/.github/workflows/on_push_to_main.yml
@@ -29,6 +29,6 @@ jobs:
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
       run: echo "$NUGET_API_KEY"
-        dotnet nuget push ./src/Markdown.Console/bin/Release/Markdown.Console.*.nupkg
+        dotnet nuget push ./src/Morello.Markdown.Console/bin/Release/Morello.Markdown.Console.*.nupkg
         --api-key "$NUGET_API_KEY"
         --source https://api.nuget.org/v3/index.json
