Updates path in GitHub actions to support new name

--- a/.github/workflows/on_push_to_main.yml
+++ b/.github/workflows/on_push_to_main.yml
@@ -1,10 +1,10 @@
-name: .NET
+name: MarkdownConsole || Publish to NuGet
 
 on:
   push:
     branches: [ "main" ]
     paths:
-      - src/Markdown.Console/**
+      - src/Morello.Markdown.Console/**
 
 jobs:
   Publish:
