--- a/.github/workflows/on_pull_request_to_main.yml
+++ b/.github/workflows/on_pull_request_to_main.yml
@@ -1,8 +1,10 @@
-name: .NET
+name: MarkdownConsole || PR Build and Test
 
 on:
   pull_request:
     branches: [ "main" ]
+    paths:
+      - src/Morello.Markdown.Console/**
 
 jobs:
   Build_and_Test:
