Minor renames to new namespace convention

--- a/src/Morello.MarkdownConsole.Tests/Morello.MarkdownConsole.Tests.csproj
+++ b/src/Morello.MarkdownConsole.Tests/Morello.MarkdownConsole.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Morello.Markdown.Console\Morello.Markdown.Console.csproj" />
+    <ProjectReference Include="..\Morello.MarkdownConsole\Morello.MarkdownConsole.csproj" />
   </ItemGroup>
 
 </Project>
