Fixes path in actions

--- a/.github/workflows/on_pull_request_to_main.yml
+++ b/.github/workflows/on_pull_request_to_main.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ "main" ]
     paths:
-      - src/Morello.Markdown.Console/**
+      - src/Morello.MarkdownConsole/**
 
 jobs:
   Build_and_Test:
