Fixes nuget pathing

--- a/src/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
+++ b/src/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
@@ -17,6 +17,8 @@
     <RepositoryUrl>https://github.com/David-Rushton/Morello.Markdown.Console</RepositoryUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
