--- a/.github/workflows/on_push_to_main.yml
+++ b/.github/workflows/on_push_to_main.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Publish
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-      run: echo "$NUGET_API_KEY"
+      run: >
         dotnet nuget push ./src/Morello.MarkdownConsole/bin/Release/Morello.MarkdownConsole.*.snupkg
         --api-key "$NUGET_API_KEY"
         --source https://api.nuget.org/v3/index.json
