--- a/.github/workflows/markdown_console_on_pull_request_to_main.yml
+++ b/.github/workflows/markdown_console_on_pull_request_to_main.yml
@@ -18,11 +18,11 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore .\src\markdown-console\markdown-console.sln
+      run: dotnet restore ./src/markdown-console/markdown-console.sln
     - name: Build
-      run: dotnet build .\src\markdown-console\markdown-console.sln --no-restore --configuration debug
+      run: dotnet build ./src/markdown-console/markdown-console.sln --no-restore --configuration debug
     - name: Test
-      run: dotnet test .\src\markdown-console\markdown-console.sln --no-build --verbosity normal --configuration debug
+      run: dotnet test ./src/markdown-console/markdown-console.sln --no-build --verbosity normal --configuration debug
     - name: Package
       # We don't use the package in PRs
       # This is simply a test that we can package
