--- a/.github/workflows/markdown_cli_on_pull_request_to_main.yml
+++ b/.github/workflows/markdown_cli_on_pull_request_to_main.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore ./src/markdown-cli/markdown-cli.sln --runtime linux-x64
+      run: dotnet restore ./src/markdown-cli/markdown-cli.sln
     - name: Build
-      run: dotnet build ./src/markdown-cli/markdown-cli.sln --no-restore --configuration debug --runtime linux-x64
+      run: dotnet build ./src/markdown-cli/markdown-cli.sln --no-restore --configuration debug
     - name: Test
-      run: dotnet test --no-build --verbosity normal --configuration debug --runtime linux-x64
+      run: dotnet test --no-build --verbosity normal --configuration debug
