--- a/src/markdown-cli/Morello.MarkdownCli/Markdown.Cli.csproj
+++ b/src/markdown-cli/Morello.MarkdownCli/Markdown.Cli.csproj
@@ -6,6 +6,11 @@
     <AssemblyName>md-cli</AssemblyName>
     <Nullable>enable</Nullable>
     <Version>0.1.0</Version>
+    <!--
+        Fixes: error NETSDK1134: Building a solution with a specific RuntimeIdentifier is not supported.
+        This has to be overriden when building for other OSs.
+    -->
+    <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
     <DebugType>embedded</DebugType>
