Fixes missing solution file in action

--- a/.github/workflows/markdown_console_on_pull_request_to_main.yml
+++ b/.github/workflows/markdown_console_on_pull_request_to_main.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Package
       # We don't use the package in PRs
       # This is simply a test that we can package
-      run: dotnet pack --include-symbols --configuration debug
+      run: dotnet pack ./src/markdown-console/markdown-console.sln --include-symbols --configuration debug
