Adds missing sln path to actions file

--- a/.github/workflows/markdown_cli_on_pull_request_to_main.yml
+++ b/.github/workflows/markdown_cli_on_pull_request_to_main.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: dotnet build ./src/markdown-cli/markdown-cli.sln --no-restore --configuration debug
     - name: Test
-      run: dotnet test --no-build --verbosity normal --configuration debug
+      run: dotnet test ./src/markdown-cli/markdown-cli.sln --no-build --verbosity normal --configuration debug
