--- a/src/markdown-console/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
+++ b/src/markdown-console/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="README.md" Pack="true" PackagePath=""/>
+    <None Include="..\README.md" Pack="true" PackagePath=""/>
     <None Include="..\..\..\LICENSE" Pack="true" PackagePath=""/>
 
     <None Include="..\..\..\images\cherry-64.png" Pack="true" PackagePath=""/>
