--- a/.github/workflows/markdown_cli_on_push_to_main.yml
+++ b/.github/workflows/markdown_cli_on_push_to_main.yml
@@ -34,7 +34,7 @@ jobs:
         # Read values from the repo
         version="v$(grep '<Version>[0-9].[0-9].[0-9]<\/Version>' ./Morello.MarkdownCli/Markdown.Cli.csproj | grep '[0-9].[0-9].[0-9]' --only-matching)"
         tag="markdown-cli-$version"
-        release_notes="$(cat ..\..\docs\markdown-cli\release-notes-$version.md)"
+        release_notes="$(cat ../../docs/markdown-cli/release-notes-$version.md)"
 
         # Config git
         git config user.name "Morello Release Bot"
