--- a/.github/workflows/markdown_cli_on_push_to_main.yml
+++ b/.github/workflows/markdown_cli_on_push_to_main.yml
@@ -43,7 +43,8 @@ jobs:
         # Tag
         git tag -a markdown-cli-latest -m "Moves latest tag" --force
         git tag -a $tag -m "Release $tag"
-        git push
+        git push origin markdown-cli-latest
+        git push origin $tag
 
         # Release
         gh release create $tag --title $version --notes-file ../../docs/markdown-cli/release-notes-$version.md
