Fixes tags created but not pushed

--- a/.github/workflows/markdown_console_on_push_to_main.yml
+++ b/.github/workflows/markdown_console_on_push_to_main.yml
@@ -51,3 +51,5 @@ jobs:
         # Tag
         git tag -a markdown-console-latest
         git tag -a $tag -m "Release $tag"
+        git push origin markdown-console-latest
+        git push origin $tag
