--- a/.github/workflows/markdown_cli_on_push_to_main.yml
+++ b/.github/workflows/markdown_cli_on_push_to_main.yml
@@ -23,15 +23,15 @@ jobs:
       run: dotnet restore
     - name: Test
       working-directory: ./src/markdown-cli/
-      run: dotnet test --no-build --verbosity normal --configuration release
+      run: dotnet test --no-build --verbosity normal --configuration Release
     - name: Build
       working-directory: ./src/markdown-cli/
       run: |
         # Windows
-        dotnet build ./Morello.MarkdownCli/Markdown.Cli.csproj --configuration release --runtime win-x64
+        dotnet build ./Morello.MarkdownCli/Markdown.Cli.csproj --configuration Release --runtime win-x64
 
         # Linux
-        dotnet build ./Morello.MarkdownCli/Markdown.Cli.csproj --configuration release --runtime linux-x64
+        dotnet build ./Morello.MarkdownCli/Markdown.Cli.csproj --configuration Release --runtime linux-x64
     - name: Tag and Release
       working-directory: ./src/markdown-cli/
       env:
