Adds thematic breaks, nested inlines & web images
Fixes multiline quotes.

--- a/src/markdown-console/Morello.MarkdownConsole.Tests/Morello.MarkdownConsole.Tests.csproj
+++ b/src/markdown-console/Morello.MarkdownConsole.Tests/Morello.MarkdownConsole.Tests.csproj
@@ -24,4 +24,17 @@
     <ProjectReference Include="..\Morello.MarkdownConsole\Morello.MarkdownConsole.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="TestAssets\valid-image.png" />
+    <Content Include="TestAssets\valid-image.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="TestAssets\ansi-escaped-cherry-icon.txt" />
+    <Content Include="TestAssets\ansi-escaped-cherry-icon.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
