--- a/.github/workflows/markdown_console_on_push_to_main.yml
+++ b/.github/workflows/markdown_console_on_push_to_main.yml
@@ -42,7 +42,7 @@ jobs:
       working-directory: ./src/markdown-console/
       run: |
         # Read values from the repo
-        version="v$(grep '<Version>[0-9].[0-9].[0-9]<\/Version>' ./Morello.MarkdownConsole/MarkdownConsole.csproj | grep '[0-9].[0-9].[0-9]' --only-matching)"
+        version="v$(grep '<Version>[0-9].[0-9].[0-9]<\/Version>' ./Morello.MarkdownConsole/Morello.MarkdownConsole.csproj | grep '[0-9].[0-9].[0-9]' --only-matching)"
         tag="markdown-console-$version"
 
         # Config git
