Fixes wrong dotnet command called
We called build instead of publish

--- a/.github/workflows/markdown_cli_on_push_to_main.yml
+++ b/.github/workflows/markdown_cli_on_push_to_main.yml
@@ -31,10 +31,10 @@ jobs:
       working-directory: ./src/markdown-cli/
       run: |
         # Windows
-        dotnet build ./Morello.MarkdownCli/Markdown.Cli.csproj --configuration Release --runtime win-x64
+        dotnet publish ./Morello.MarkdownCli/Markdown.Cli.csproj --configuration Release --runtime win-x64
 
         # Linux
-        dotnet build ./Morello.MarkdownCli/Markdown.Cli.csproj --configuration Release --runtime linux-x64
+        dotnet publish ./Morello.MarkdownCli/Markdown.Cli.csproj --configuration Release --runtime linux-x64
     - name: Tag and Release
       working-directory: ./src/markdown-cli/
       env:
