Fixes call to dotnet restore

--- a/.github/workflows/markdown_cli_on_pull_request_to_main.yml
+++ b/.github/workflows/markdown_cli_on_pull_request_to_main.yml
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       working-directory: ./src/markdown-cli/
-      run: dotnet restore --configuration Debug
+      run: dotnet restore
     - name: Build
       working-directory: ./src/markdown-cli/
       run: dotnet build --no-restore --configuration Debug
