--- a/.github/workflows/markdown_cli_on_push_to_main.yml
+++ b/.github/workflows/markdown_cli_on_push_to_main.yml
@@ -20,10 +20,10 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       working-directory: ./src/markdown-cli/
-      run: dotnet restore --configuration Release
+      run: dotnet restore
     - name: Build
       working-directory: ./src/markdown-cli/
-      run: dotnet build --no-restore --configuration Release
+      run: dotnet build --configuration Release
     - name: Test
       working-directory: ./src/markdown-cli/
       run: dotnet test --no-build --verbosity normal --configuration Release
