Dr/add binaries to release (#41)
Fixes binaries not attached to releases pages

--- a/.github/workflows/markdown_cli_on_pull_request_to_main.yml
+++ b/.github/workflows/markdown_cli_on_pull_request_to_main.yml
@@ -22,7 +22,7 @@ jobs:
       run: dotnet restore
     - name: Build
       working-directory: ./src/markdown-cli/
-      run: dotnet build --no-restore --configuration debug
+      run: dotnet build --no-restore --configuration Debug
     - name: Test
       working-directory: ./src/markdown-cli/
-      run: dotnet test --no-build --verbosity normal --configuration debug
+      run: dotnet test --no-build --verbosity normal --configuration Debug
