--- a/src/markdown-console/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
+++ b/src/markdown-console/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
@@ -6,8 +6,8 @@
     <Nullable>enable</Nullable>
 
     <PackageId>Morello.MarkdownConsole</PackageId>
-    <Version>1.3.1</Version>
-    <icon>cherry-64.png</icon>
+    <Version>1.3.2</Version>
+    <PackageIcon>cherry-64.png</PackageIcon>
     <Company>Morello</Company>
     <Authors>David Rushton</Authors>
     <Title>Markdown Console</Title>
@@ -34,10 +34,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\README.md" Pack="true" PackagePath="" />
-    <None Include="..\..\..\LICENSE" Pack="true" PackagePath="" />
-
-    <None Include="..\images\cherry-64.png" Pack="true" PackagePath="" />
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
+    <None Include="..\..\..\LICENSE" Pack="true" PackagePath="\" />
+    <None Include="..\images\cherry-64.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
