--- a/src/markdown-console/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
+++ b/src/markdown-console/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
@@ -23,9 +23,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <ReleaseNotes>
-        Adds debug symbols
-    </ReleaseNotes>
+    <ReleaseNotes>See embedded file</ReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -41,7 +39,9 @@
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
     <None Include="..\..\..\LICENSE" Pack="true" PackagePath="\" />
+    <None Include="..\..\..\docs\markdown-console\release-notes.md" />
     <None Include="..\images\cherry-64.png" Pack="true" PackagePath="\" />
+
   </ItemGroup>
 
 </Project>
