--- a/src/markdown-console/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
+++ b/src/markdown-console/Morello.MarkdownConsole/Morello.MarkdownConsole.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
 
     <PackageId>Morello.MarkdownConsole</PackageId>
-    <Version>1.3.2</Version>
+    <Version>1.4.0</Version>
     <PackageIcon>cherry-64.png</PackageIcon>
     <Company>Morello</Company>
     <Authors>David Rushton</Authors>
@@ -22,13 +23,15 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <ReleaseNotes>
-        Adds debug symbols
-    </ReleaseNotes>
+    <ReleaseNotes>See embedded file</ReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.28.1" />
+    <PackageReference Include="Nullable" Version="1.3.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Spectre.Console" Version="0.44.0" />
     <PackageReference Include="Spectre.Console.ImageSharp" Version="0.44.0" />
   </ItemGroup>
@@ -36,7 +39,9 @@
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
     <None Include="..\..\..\LICENSE" Pack="true" PackagePath="\" />
+    <None Include="..\..\..\docs\markdown-console\release-notes.md" />
     <None Include="..\images\cherry-64.png" Pack="true" PackagePath="\" />
+
   </ItemGroup>
 
 </Project>
